--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -1,13 +1,22 @@
-name: My first workflow
-on: [ push ]
+name: CI/CD Pipeline
+
+on: [push]
 
 jobs:
-  hello_World:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Echo current branch
-      run: echo "$(date: Current branch is ${{ github.ref_name}})"
-
-    - name: Chechout source
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - name: Install Dependencies
+        run: npm install
+      - name: Run Tests
+        run: npm test
+      - name: Build
+        run: npm run build
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Deploy to Production
+        run: scripts/deploy.sh
